@@ -1,5 +1,10 @@
 2008-03-10  Ross Burton  <ross@burtonini.com>
 
+	* Makefile.am:
+	Clean up release rules.
+
+2008-03-10  Ross Burton  <ross@burtonini.com>
+
 	* configure.in:
 	* NEWS:
 	Version 2.22.0.
